Completely new personalization condition system, MUCH more flexible, but still has a problem with the system names that must be manually entered for it to work correctly.

--- a/src/main/webapp/resources/personalization_fr.properties
+++ b/src/main/webapp/resources/personalization_fr.properties
@@ -1,3 +1,5 @@
+jmix_personalizationComponents=Personalisation
+
 jnt_incrementCookie = Incrémente un cookie
 jnt_incrementCookie.j_cookieName = Nom du cookie
 jnt_ifCookieHigherThan = Si le cookie a une valeur plus élevé que
