- Some cleanup - Started implementation setUserProperty action - Working on better look for personalization components

--- a/src/main/webapp/resources/personalization_fr.properties
+++ b/src/main/webapp/resources/personalization_fr.properties
@@ -2,12 +2,30 @@ jmix_personalizationComponents=Personalisation
 
 jnt_incrementCookie = Incrémente un cookie
 jnt_incrementCookie.j_cookieName = Nom du cookie
-jnt_ifCookieHigherThan = Si le cookie a une valeur plus élevé que
-jnt_ifCookieHigherThan.j_cookieName = Nom du cookie
-jnt_ifCookieHigherThan.j_cookieValue = Valeur limite du cookie
-
-label.ifCookieHigherThan.componentDescription = Ce composant affiche ses éléments uniquement si un cookie a une valeur plus élevée qu'une valeur limite.
-label.ifCookieHigherThanArea = Zone si cookie a une valeur plus élevée que
 
 label.incrementCookie.componentDescription = Ce composant incrémente un cookie à chaque fois qu'il est affiché.
 label.incrementCookieArea = Zone d'incrémentation de cookie
+jnt_andExpression=gauche ET droite
+jnt_booleanExpression=Expression boulÈenne
+jnt_booleanValueExpression=Valeur boulÈenne
+jnt_booleanValueExpression.j_value=Est vrai
+jnt_cookieValueExpression=Valeur d'un cookie
+jnt_cookieValueExpression.j_cookieName=Nom du cookie
+jnt_countryCodeValueExpression=Code d'un pays
+jnt_countryCodeValueExpression.j_value=Pays
+jnt_equalsExpression=gauche EGALE droite
+jnt_expression=Expression
+jnt_greaterThanExpression=gauche PLUS GRAND QUE droite
+jnt_ifThenElse=SI condition ALORS/AUTREMENT
+jnt_notExpression=NEGATION expression
+jnt_numberValueExpression=Valeur numÈrique
+jnt_numberValueExpression.j_value=Nombre
+jnt_orExpression=gauche OU droite
+jnt_smallerThanExpression=gauche PLUS PETIT QUE droite
+jnt_stringValueExpression=ChaÓne de charactËres
+jnt_stringValueExpression.j_value=ChaÓne de charactËres
+label.ifThenElse=Zone Si-Alors-Autrement
+label.ifThenElse.componentDescription=Composant condition qui affiche des sous componsants en fonction de la valeur de la condition
+label.ifThenElse.elseDisplay=AUTREMENT AFFICHE
+label.ifThenElse.ifCondition=SI
+label.ifThenElse.thenDisplay=ALORS AFFICHE
