Implement AJAX methods to set/increment and remove a user's property

--- a/src/main/webapp/resources/personalization_fr.properties
+++ b/src/main/webapp/resources/personalization_fr.properties
@@ -29,3 +29,4 @@ label.ifThenElse.componentDescription=Composant condition qui affiche des sous c
 label.ifThenElse.elseDisplay=AUTREMENT AFFICHE
 label.ifThenElse.ifCondition=SI
 label.ifThenElse.thenDisplay=ALORS AFFICHE
+label.ajaxSetUserProperty.willSetPropertyToValue=
