--- a/src/main/webapp/resources/personalization_fr.properties
+++ b/src/main/webapp/resources/personalization_fr.properties
@@ -30,3 +30,19 @@ label.ifThenElse.elseDisplay=AUTREMENT AFFICHE
 label.ifThenElse.ifCondition=SI
 label.ifThenElse.thenDisplay=ALORS AFFICHE
 label.ajaxSetUserProperty.willSetPropertyToValue=
+jnt_ajaxIncrementUserProperty=Incrémente une propriété de l'utilisateur courant (AJAX)
+jnt_ajaxIncrementUserProperty.j_propertyName=Nom de la propriété
+jnt_ajaxRemoveUserProperty=Efface une propriété de l'utilisateur courant (AJAX)
+jnt_ajaxRemoveUserProperty.j_propertyName=Nom de la propriété
+jnt_ajaxSetUserProperty.j_propertyName=Nom de la propriété
+jnt_ajaxSetUserProperty.j_propertyValue=Valeur pour la propriété
+jnt_eval=Evalue une expression et affiche le résultat
+jnt_googleMapEval=Evalue une expression et l'affiche sur un plan
+jnt_incrementUserProperty=Incrémente une propriété de l'utilisateur courrant
+jnt_incrementUserProperty.j_propertyName=Nom de la propriété
+jnt_removeUserProperty=Efface une propriété de l'utilisateur courant
+jnt_removeUserProperty.j_propertyName=Nom de la propriété
+jnt_setUserProperty.j_propertyName=Nom de la propriété
+jnt_setUserProperty.j_propertyValue=Valeur pour la propriété
+jnt_userPropertyValueExpression=Valeur d'une propriété de l'utilisateur courant
+jnt_userPropertyValueExpression.j_propertyName=Nom de la propriété
