Fix some french translations

--- a/src/main/webapp/resources/personalization_fr.properties
+++ b/src/main/webapp/resources/personalization_fr.properties
@@ -1,10 +1,10 @@
 jmix_personalizationComponents=Personalisation
 
-jnt_incrementCookie = IncrŽmente un cookie
+jnt_incrementCookie = IncréŽmente un cookie
 jnt_incrementCookie.j_cookieName = Nom du cookie
 
-label.incrementCookie.componentDescription = Ce composant incrŽmente un cookie ˆ chaque fois qu'il est affichŽ.
-label.incrementCookieArea = Zone d'incrŽmentation de cookie
+label.incrementCookie.componentDescription = Ce composant incréŽmente un cookie ˆ chaque fois qu'il est affichŽ.
+label.incrementCookieArea = Zone d'incréŽmentation de cookie
 jnt_andExpression=gauche ET droite
 jnt_booleanExpression=Expression bouléenne
 jnt_booleanValueExpression=Valeur bouléenne
@@ -38,7 +38,7 @@ jnt_ajaxSetUserProperty.j_propertyName=Nom de la propriété
 jnt_ajaxSetUserProperty.j_propertyValue=Valeur pour la propriété
 jnt_eval=Evalue une expression et affiche le résultat
 jnt_googleMapEval=Evalue une expression et l'affiche sur un plan
-jnt_incrementUserProperty=Incrémente une propriété de l'utilisateur courrant
+jnt_incrementUserProperty=Incrémente une propriété de l'utilisateur courant
 jnt_incrementUserProperty.j_propertyName=Nom de la propriété
 jnt_removeUserProperty=Efface une propriété de l'utilisateur courant
 jnt_removeUserProperty.j_propertyName=Nom de la propriété
@@ -46,3 +46,15 @@ jnt_setUserProperty.j_propertyName=Nom de la propriété
 jnt_setUserProperty.j_propertyValue=Valeur pour la propriété
 jnt_userPropertyValueExpression=Valeur d'une propriété de l'utilisateur courant
 jnt_userPropertyValueExpression.j_propertyName=Nom de la propriété
+jnt_ajaxHTML5LocationTracker=Tracker de position (HTML 5)
+jnt_ajaxSetUserProperty=Renseigne une propriété utilisateur (AJAX)
+jnt_ajaxWindowAndScreenSizeTracker=Tracker de la taille de la fenêtre et de l'écran
+jnt_distanceInKilometersExpression=Distance entre 2 position (km)
+jnt_locationValueExpression=Position géographique (latitute/longitude)
+jnt_locationValueExpression.j_latitude=latitude
+jnt_locationValueExpression.j_longitude=longitude
+jnt_setUserProperty=Renseigne une propriété utilisateur
+jnt_trackingDataReport=Rapport de données tracées
+jnt_trackingDataValueExpression=Valeur d'une donnée tracée
+jnt_trackingDataViewer=Panneau de visualisation des données tracées
+jnt_userAgePropertyValueExpression=Age de l'utilisateur courant
