- Make the spam post limiter configurable so that it can work in preview mode too (default) - Fix tracking data serialization - Add limit to tracking data property definition, and implement it - Add more french translations (still not complete) - Add some missing resource entries

--- a/src/main/webapp/resources/personalization_fr.properties
+++ b/src/main/webapp/resources/personalization_fr.properties
@@ -58,3 +58,17 @@ jnt_trackingDataReport=Rapport de données tracées
 jnt_trackingDataValueExpression=Valeur d'une donnée tracée
 jnt_trackingDataViewer=Panneau de visualisation des données tracées
 jnt_userAgePropertyValueExpression=Age de l'utilisateur courant
+jnt_ajaxTimeOnPageTracker=Tracker de temps passé sur la page
+jnt_trackingDataValueExpression.j_propertyName=Nom de la propriété
+label.ajaxHTML5LocationTracker=Tracker de position utilisant HTML 5 et AJAX
+label.ajaxHTML5LocationTracker.componentDescription=Utilise la technologie AJAX pour tracer la position de l'utilisateur (HTML5)
+label.ajaxIncrementUserProperty=Incrémente une propriété utilisateur en AJAX
+label.ajaxIncrementUserProperty.componentDescription=Utilise AJAX pour incrémenter une propriété de l'utilisateur courant
+label.ajaxIncrementUserProperty.willIncrementProperty=Ce composant incrémentera la propriété ''{0}'' de l'utilisateur courant
+label.ajaxRemoveUserProperty=Efface une propriéte de l'utilisateur courant (AJAX)
+label.eval=Evalue une expression
+label.eval.componentDescription=Evalue l'expression et affiche sa valeur
+label.eval.evaluate=EVALUE
+label.googleMapEval=Utilise une expression pour afficher une carte Google Maps
+label.googleMapEval.componentDescription=Evalue une expression de position et l'affiche dans la carte Google Maps
+label.googleMapEval.displayMap=AFFICHE LA POSITION DANS GOOGLE MAPS
