--- a/src/main/webapp/resources/personalization_fr.properties
+++ b/src/main/webapp/resources/personalization_fr.properties
@@ -6,8 +6,8 @@ jnt_incrementCookie.j_cookieName = Nom du cookie
 label.incrementCookie.componentDescription = Ce composant incréŽmente un cookie ˆ chaque fois qu'il est affichŽ.
 label.incrementCookieArea = Zone d'incréŽmentation de cookie
 jnt_andExpression=gauche ET droite
-jnt_booleanExpression=Expression bouléenne
-jnt_booleanValueExpression=Valeur bouléenne
+jnt_booleanExpression=Expression booléenne
+jnt_booleanValueExpression=Valeur booléenne
 jnt_booleanValueExpression.j_value=Est vrai
 jnt_cookieValueExpression=Valeur d'un cookie
 jnt_cookieValueExpression.j_cookieName=Nom du cookie
